--- a/README.org
+++ b/README.org
@@ -8,6 +8,7 @@ I'm currently bouncing back and forth between osx and linux so there is a bit of
 both here.
 
 - bash - osx
+- dunst - linux
 - fish - osx/linux
 - hammerspoon - osx
 - linux - linux, obviously
