--- a/spacemacs/.emacs.d/private/orgmode.org
+++ b/spacemacs/.emacs.d/private/orgmode.org
@@ -2,8 +2,24 @@
 
 * Keybindings
 ** Global capture
+   org capture
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-c c") 'org-capture)
+#+END_SRC
+
+org clock stuff
+#+BEGIN_SRC emacs-lisp
+  (spacemacs/set-leader-keys-for-major-mode 'org-mode "oi" 'org-clock-in)
+  (spacemacs/set-leader-keys-for-major-mode 'org-mode "oo" 'org-clock-out)
+  (spacemacs/set-leader-keys-for-major-mode 'org-mode "oj" 'org-clock-jump-to-current-clock)
+  (spacemacs/set-leader-keys "oj" 'org-clock-jump-to-current-clock)
+#+END_SRC
+
+** add note
+   this is too handy to not have a conventient binding. it will add a
+   timestamped note to the log book of the curent heading
+#+BEGIN_SRC emacs-lisp
+  (spacemacs/set-leader-keys-for-major-mode 'org-mode "on" 'org-add-note)
 #+END_SRC
 * General settings
 ** refile targets
@@ -42,6 +58,43 @@ just add the entire directory
 #+BEGIN_SRC emacs-lisp
   (setq org-agenda-files '("~/dev/notes"))
 #+END_SRC
+
+skip stuff i no longer care about
+#+BEGIN_SRC emacs-lisp
+(setq org-agenda-skip-scheduled-if-done t
+      org-agenda-skip-deadline-if-done  t)
+#+END_SRC
+
+show agenda as the only window
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-window-setup "only-window")
+#+END_SRC
+
+if agenda was opened from i3 (frame name will be "org-agenda-quickview"
+then close the frame when we are done
+#+BEGIN_SRC emacs-lisp
+  (defadvice org-agenda-quit
+      (after close-agenda-quickview)
+    (if (equal "org-agenda-quickview" (frame-parameter nil 'name))
+        (delete-frame)))
+
+  (ad-activate 'org-agenda-quit)
+#+END_SRC
+
+*** custom agenda commands
+    #+BEGIN_SRC emacs-lisp
+      (setq org-agenda-custom-commands
+            '(("w" "Work agenda view"
+               ((tags "PRIORITY=\"A\""
+                      ((org-agenda-skip-function '(org-agenda-skip-entry-if 'todo 'done))
+                       (org-agenda-overriding-header "High-priority unfinished tasks:")))
+                (agenda "")
+                (tags "@work"
+                      ((org-agenda-skip-function '(org-agenda-skip-entry-if 'nottodo '("IN_REVIEW")))
+                       (org-agenda-overriding-header "Review follow up"))))
+               ((org-agenda-tag-filter-preset '("+@work")))))
+            )
+    #+END_SRC
 ** org link open
 #+BEGIN_SRC emacs-lisp
   (setq org-link-frame-setup
@@ -63,74 +116,85 @@ org drill, think this comes from org-
 #+END_SRC
 * Capture templates
 #+BEGIN_SRC emacs-lisp
-  ;; this formatting is kind of weird but it makes it easier
-  (setq org-capture-templates
-        (quote (
-  ("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-  "* TODO %?
-  :PROPERTIES:
-  :CREATED: %U
-  :JIRA_TICKET: %^{TICKET|NONE}
-  :END:
+    ;; this formatting is kind of weird but it makes it easier
+    (setq org-capture-templates
+          (quote (
+    ("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+    "* TODO %?
+    :PROPERTIES:
+    :CREATED: %U
+    :JIRA_TICKET: %^{TICKET|NONE}
+    :END:
+    " :clock-in t :clock-resume t)
+
+    ("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
+    "* TODO %?
+    :PROPERTIES:
+    :CREATED: %U
+    :END:
+    " :clock-in t :clock-resume t)
+
+    ;; these are for anything that interupts my current task
+    ("i" "interruption" entry (file+headline "~/dev/notes/uniregistry.org" "Interuptions")
+    "* TODO %?
+    :PROPERTIES:
+    :CREATED: %U
+    :END:
+    " :clock-in t :clock-resume t)
+
+    ;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+    ;; "* NEXT Respond to %:from on %:subject
+    ;; SCHEDULED: %t
+    ;; CREATED: %U
+    ;; %a
+    ;; " :clock-in t :clock-resume t :immediate-finish t)
+
+    ("n" "note" entry (file "~/dev/notes/refile.org")
+    "* %? :NOTE:
+    :PROPERTIES:
+    :CREATED: %U
+    :END:
+    %a
+    " :clock-in t :clock-resume t)
+
+    ("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
+    "* %?
+    :PROPERTIES:
+    :CREATED: %U
+    :END:")
+
+    ("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
+    "* %?
+    :PROPERTIES:
+    :CREATED: %U
+    :END:
   " :clock-in t :clock-resume t)
 
-  ("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
-  "* TODO %?
-  :PROPERTIES:
-  :CREATED: %U
-  :END:
+    ;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
+    ;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
+
+    ("m" "Meeting" entry (file "~/dev/notes/refile.org")
+    "* TODO %? :MEETING:
+    :PROPERTIES:
+    :CREATED: %U
+    :END:
   " :clock-in t :clock-resume t)
 
-  ;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-  ;; "* NEXT Respond to %:from on %:subject
-  ;; SCHEDULED: %t
-  ;; CREATED: %U
-  ;; %a
-  ;; " :clock-in t :clock-resume t :immediate-finish t)
+    ;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
+    ;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
 
-  ("n" "note" entry (file "~/dev/notes/refile.org")
-  "* %? :NOTE:
-  :PROPERTIES:
-  :CREATED: %U
-  :END:
-  %a
-  " :clock-in t :clock-resume t)
+    ("h" "Habit" entry (file "~/dev/notes/refile.org")
+    "* NEXT %?
+    :CREATED: %U
+    %a
+    SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
+    :PROPERTIES:
+    :STYLE: habit
+    :REPEAT_TO_STATE: NEXT
+    :END:
+  ")
 
-  ("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
-  "* %?
-  :PROPERTIES:
-  :CREATED: %U
-  :END:")
-
-  ("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
-  "* %?
-  :PROPERTIES:
-  :CREATED: %U
-  :END:" :clock-in t :clock-resume t)
-
-  ;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
-  ;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
-
-  ("m" "Meeting" entry (file "~/dev/notes/refile.org")
-  "* MEETING with %? :MEETING:
-  :PROPERTIES:
-  :CREATED: %U
-  :END:" :clock-in t :clock-resume t)
-
-  ;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
-  ;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
-
-  ("h" "Habit" entry (file "~/dev/notes/refile.org")
-  "* NEXT %?
-  :CREATED: %U
-  %a
-  SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
-  :PROPERTIES:
-  :STYLE: habit
-  :REPEAT_TO_STATE: NEXT
-  :END:")
-
-  )))
+    )))
 #+END_SRC
 
 #+RESULTS:
@@ -184,18 +248,24 @@ org drill, think this comes from org-
 
     (add-hook 'org-capture-after-finalize-hook 'tosh/post-capture)
   #+END_SRC
-* Todo keyword colors
+* Todos
+** states
 #+BEGIN_SRC emacs-lisp
+  (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "IN_REVIEW(r!)" "MEETING" "WAITING" "|" "DONE(d!)" "HOLD" "CANCELLED(c@)")))
+#+END_SRC
+** colors  
+#+BEGIN_SRC emacs-lisp :tangle no
   (setq org-todo-keyword-faces
         (quote (("TODO" :foreground "red" :weight bold)
                 ("NEXT" :foreground "blue" :weight bold)
-                ("DONE" :foreground "forest green" :weight bold)
                 ("IN_REVIEW" :foreground "white" :background "red" :weight bold)
                 ("WAITING" :foreground "orange" :weight bold)
+                ("DONE" :foreground "forest green" :weight bold)
                 ("HOLD" :foreground "magenta" :weight bold)
                 ("CANCELLED" :foreground "forest green" :weight bold)
                 ("MEETING" :foreground "forest green" :weight bold))))
 #+END_SRC
+ 
 * Clocking
 ** Change tasks to NEXT when clocking in
 Function
@@ -231,8 +301,14 @@ The following setting creates a unique task ID for the heading in the
 around arbitrarily in my org files and the link to it still works.
 
 #+begin_src emacs-lisp
-(setq org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
+  (require 'org-id)
+  (setq org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
 #+end_src
+** Always use hours
+   days are dumb
+   #+BEGIN_SRC emacs-lisp
+   (setq org-duration-format 'h:mm)
+   #+END_SRC
 * Babel
 #+BEGIN_SRC emacs-lisp
   (org-babel-do-load-languages
