--- a/spacemacs/.emacs.d/private/orgmode.org
+++ b/spacemacs/.emacs.d/private/orgmode.org
@@ -124,90 +124,100 @@ org drill, think this comes from org-
 #+END_SRC
 * Capture templates
 #+BEGIN_SRC emacs-lisp
-    ;; this formatting is kind of weird but it makes it easier
-    (setq org-capture-templates
-          (quote (
-    ("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-    "* TODO %?
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-    " :clock-in t :clock-resume t :empty-lines 1)
+;; this formatting is kind of weird but it makes it easier
+(setq org-capture-templates
+      (quote (
+("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+"* TODO %?
+:PROPERTIES:
+:CREATED: %U
+:END:
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
-    "* TODO %?
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-    " :clock-in t :clock-resume t :empty-lines 1)
+("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
+"* TODO %?
+:PROPERTIES:
+:CREATED: %U
+:END:
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ;; these are for anything that interupts my current task
-    ("i" "interruption" entry (file+headline "~/dev/notes/uniregistry.org" "Interuptions")
-    "* TODO %?
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-    " :clock-in t :clock-resume t :empty-lines 1)
+;; these are for anything that interupts my current task
+("i" "interruption" entry (file+headline "~/dev/notes/uniregistry.org" "Interuptions")
+"* TODO %?
+:PROPERTIES:
+:CREATED: %U
+:END:
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-    ;; "* NEXT Respond to %:from on %:subject
-    ;; SCHEDULED: %t
-    ;; CREATED: %U
-    ;; %a
-    ;; " :clock-in t :clock-resume t :immediate-finish t)
+;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+;; "* NEXT Respond to %:from on %:subject
+;; SCHEDULED: %t
+;; CREATED: %U
+;; %a
+;; " :clock-in t :clock-resume t :immediate-finish t)
 
-    ("n" "note" entry (file "~/dev/notes/refile.org")
-    "* %? :NOTE:
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-    %a
-    " :clock-in t :clock-resume t :empty-lines 1)
+("n" "note" entry (file "~/dev/notes/refile.org" "General")
+"* %? :NOTE:
+:PROPERTIES:
+:CREATED: %U
+:END:
+%a
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
-    "* %?
-    :PROPERTIES:
-    :CREATED: %U
-    :END:")
+("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
+"* %?
+:PROPERTIES:
+:CREATED: %U
+:END:")
 
-    ("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
-    "* %?
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-  " :clock-in t :clock-resume t :empty-lines 1)
+("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
+"* %?
+:PROPERTIES:
+:CREATED: %U
+:END:
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
-    ;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
+;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
+;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
 
-    ("m" "Meeting" entry (file "~/dev/notes/refile.org")
-    "* TODO %? :MEETING:
-    :PROPERTIES:
-    :CREATED: %U
-    :END:
-  " :clock-in t :clock-resume t :empty-lines 1)
+("m" "Meeting" entry (file "~/dev/notes/refile.org")
+"* TODO %? :MEETING:
+:PROPERTIES:
+:CREATED: %U
+:END:
+" :clock-in t :clock-resume t :empty-lines 1)
 
-    ;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
-    ;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
+;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
+;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
 
-    ("h" "Habit" entry (file "~/dev/notes/refile.org")
-    "* NEXT %?
-    :CREATED: %U
-    %a
-    SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
-    :PROPERTIES:
-    :STYLE: habit
-    :REPEAT_TO_STATE: NEXT
-    :END:
-  ")
+("h" "Habit" entry (file "~/dev/notes/refile.org")
+"* NEXT %?
+:CREATED: %U
+%a
+SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
+:PROPERTIES:
+:STYLE: habit
+:REPEAT_TO_STATE: NEXT
+:END:
+")
 
-    ("b" "Link from browser" entry (file "~/dev/notes/bookmarks.org")
-     "* TODO %? |- (%:description) :BOOKMARK:\n:PROPERTIES:\n:CREATED: %U\n:Source: %:link\n:END:\n%i\n" :clock-in t :clock-resume t)
-    ("s" "Selection from browser" entry (file "~/dev/notes/bookmarks.org")
-     "* TODO %? :BOOKMARK:\n%(replace-regexp-in-string \"\n.*\" \"\" \"%i\")\n:PROPERTIES:\n:CREATED: %U\n:Source: %:link\n:END:\n%i\n" :clock-in t :clock-resume t)
+("b" "Link from browser" entry (file+headline "~/dev/notes/bookmarks.org" "General")
+"* TODO %? |- (%:description) %^g
+:PROPERTIES:
+:CREATED: %U
+:SOURCE: %:link
+:END:
+%:link
 
-    )))
+%(fill-paragraph)%i
+
+" :clock-in t :clock-resume t)
+
+)))
 #+END_SRC
+
+#+RESULTS:
+| w | work todo | entry | (file+headline ~/dev/notes/uniregistry.org Tasks) | * TODO %? |
 
 * Capture settings
   test 1
