--- a/spacemacs/.emacs.d/private/orgmode.org
+++ b/spacemacs/.emacs.d/private/orgmode.org
@@ -70,7 +70,7 @@ show agenda as the only window
 (setq org-agenda-window-setup "only-window")
 #+END_SRC
 
-if agenda was opened from i3 (frame name will be "org-agenda-quickview"
+if agenda was opened from WM (frame name will be "org-agenda-quickview"
 then close the frame when we are done
 #+BEGIN_SRC emacs-lisp
 (defadvice org-agenda-quit
@@ -114,12 +114,16 @@ then close the frame when we are done
            ((org-agenda-tag-filter-preset '("+@work"))))
           ("b" "Bookmarks view"
             ((org-tags-view "BOOKMARK")
-            (org-agenda-cmp-user-defined (cmp-date-property
-                                          "CREATED"))
-            (org-agenda-sorting-strategy '(user-defined-down))
+            ;; (org-agenda-cmp-user-defined (cmp-date-property
+            ;;                               "CREATED"))
+            ;; (org-agenda-sorting-strategy '(user-defined-down))
             )))
         )
 #+END_SRC
+
+#+RESULTS:
+| w | Work agenda view | ((tags PRIORITY="A" ((org-agenda-skip-function (quote (org-agenda-skip-entry-if (quote todo) (quote done)))) (org-agenda-overriding-header High-priority unfinished tasks:))) (agenda ) (tags @work ((org-agenda-skip-function (quote (org-agenda-skip-entry-if (quote nottodo) (quote (IN_REVIEW))))) (org-agenda-overriding-header Review follow up)))) | ((org-agenda-tag-filter-preset (quote (+@work)))) |
+| b | Bookmarks view   | ((org-tags-view BOOKMARK) (org-agenda-sorting-strategy (quote (user-defined-down))))                                                                                                                                                                                                                                                                      |                                                   |
 
 ** org link open
 #+BEGIN_SRC emacs-lisp
@@ -154,96 +158,96 @@ org drill, think this comes from org-
 #+END_SRC
 * Capture templates
 #+BEGIN_SRC emacs-lisp
-;; this formatting is kind of weird but it makes it easier
-(setq org-capture-templates
-      (quote (
-("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-"* TODO %?
-:PROPERTIES:
-:CREATED: %U
-:END:
-" :clock-in t :clock-resume t :empty-lines 1)
+  ;; this formatting is kind of weird but it makes it easier
+  (setq org-capture-templates
+        (quote (
+  ("w" "work todo" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+  "* TODO %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
-"* TODO %?
-:PROPERTIES:
-:CREATED: %U
-:END:
-" :clock-in t :clock-resume t :empty-lines 1)
+  ("t" "todo" entry (file+headline "~/dev/notes/refile.org" "Tasks")
+  "* TODO %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-;; these are for anything that interupts my current task
-("i" "interruption" entry (file+headline "~/dev/notes/uniregistry.org" "Interuptions")
-"* TODO %?
-:PROPERTIES:
-:CREATED: %U
-:END:
-" :clock-in t :clock-resume t :empty-lines 1)
+  ;; these are for anything that interupts my current task
+  ("i" "interruption" entry (file+headline "~/dev/notes/uniregistry.org" "Interuptions")
+  "* TODO %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
-;; "* NEXT Respond to %:from on %:subject
-;; SCHEDULED: %t
-;; CREATED: %U
-;; %a
-;; " :clock-in t :clock-resume t :immediate-finish t)
+  ;; ("r" "respond" entry (file+headline "~/dev/notes/uniregistry.org" "Tasks")
+  ;; "* NEXT Respond to %:from on %:subject
+  ;; SCHEDULED: %t
+  ;; CREATED: %U
+  ;; %a
+  ;; " :clock-in t :clock-resume t :immediate-finish t)
 
-("n" "note" entry (file "~/dev/notes/refile.org" "General")
-"* %? :NOTE:
-:PROPERTIES:
-:CREATED: %U
-:END:
-%a
-" :clock-in t :clock-resume t :empty-lines 1)
+  ("n" "note" entry (file "~/dev/notes/refile.org")
+  "* %? :NOTE:
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  %a
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
-"* %?
-:PROPERTIES:
-:CREATED: %U
-:END:")
+  ("s" "code snippet" entry (file+headline "~/dev/notes/stuff.org" "Refile")
+  "* %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:")
 
-("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
-"* %?
-:PROPERTIES:
-:CREATED: %U
-:END:
-" :clock-in t :clock-resume t :empty-lines 1)
+  ("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
+  "* %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
-;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
+  ;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
+  ;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
 
-("m" "Meeting" entry (file "~/dev/notes/refile.org")
-"* TODO %? :MEETING:
-:PROPERTIES:
-:CREATED: %U
-:END:
-" :clock-in t :clock-resume t :empty-lines 1)
+  ("m" "Meeting" entry (file "~/dev/notes/refile.org")
+  "* TODO %? :MEETING:
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
 
-;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
-;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
+  ;; ("d" "NowU Deploy" entry (file+olp "~/dev/notes/gannet.org" "Tasks" "Deploy")
+  ;;  "* CREATED: %U\nrelease %?\n%[~/dev/notes/gannet_deployment_task.org]" :clock-in t :clock-resume t)
 
-("h" "Habit" entry (file "~/dev/notes/refile.org")
-"* NEXT %?
-:CREATED: %U
-%a
-SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
-:PROPERTIES:
-:STYLE: habit
-:REPEAT_TO_STATE: NEXT
-:END:
-")
+  ("h" "Habit" entry (file "~/dev/notes/refile.org")
+  "* NEXT %?
+  :CREATED: %U
+  %a
+  SCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")
+  :PROPERTIES:
+  :STYLE: habit
+  :REPEAT_TO_STATE: NEXT
+  :END:
+  ")
 
-("b" "Link from browser" entry (file+headline "~/dev/notes/bookmarks.org" "General")
-"* TODO %? |- (%:description) %^g
-:PROPERTIES:
-:CREATED: %U
-:SOURCE: %:link
-:END:
-%:link
+  ("b" "Link from browser" entry (file+headline "~/dev/notes/bookmarks.org" "Refile")
+  "* TODO %? %:description %^g
+  :PROPERTIES:
+  :CREATED: %U
+  :SOURCE: %:link
+  :END:
+  %:link
 
-%(fill-paragraph)%i
+  %i
 
-" :clock-in t :clock-resume t)
+  " :clock-in t :clock-resume t)
 
-)))
+  )))
 #+END_SRC
 
 #+RESULTS:
@@ -378,4 +382,74 @@ around arbitrarily in my org files and the link to it still works.
 * Export settings
 #+BEGIN_SRC emacs-lisp
 (setq org-html-htmlize-output-type 'css)
+#+END_SRC
+* Bookmark stuff
+#+BEGIN_SRC emacs-lisp :tangle no
+  (defun tl/bookmark-search (search)
+    (let ((search-tags (split-string search)) (res '(and (todo))))
+      (--map (list (org-element-property :raw-value it)
+                   (org-element-property :SOURCE it))
+             (org-ql "~/dev/notes/bookmarks.org"
+               ;; (and (todo)
+               ;;      (tags search))))))
+                 ;; (and (let (s) (--each search-tags (setq s (cons `(tags ,it) s))) s))))))
+
+                 (eval (dolist (search-str search-tags res)
+                         (print search-tags)
+                         (setq res (append res `((tags ,search-str))))))))))
+
+    ;; (print (tl/bookmark-search "test"))
+
+    ;; (defun tl/build-and (search-tags)
+    ;;   (let (res '(and (todo)))
+    ;;     (dolist (search-str search-tags res)
+    ;;       (setq res (append res `((tags ,search-str)))))))
+
+    ;; (let (res)
+    ;;   (dolist (str (split-string "tosh") res)
+    ;;     (setq res str)
+    ;;     (print res)))
+
+
+    ;; (--> '("tosh" "stuff") `(tags ,it))
+
+    ;; (let (s) (--each '("tosh" "test") (setq s (cons `(tags ,it) s))) s)
+#+END_SRC
+
+#+RESULTS:
+: tl/bookmark-search
+
+#+BEGIN_SRC emacs-lisp :tangle no
+  (defun tl/bookmark-search (search)
+        (--map (list (org-element-property :raw-value it)
+                     (org-element-property :SOURCE it))
+               (org-ql "~/dev/notes/bookmarks.org"
+                 (and
+                  (todo)
+                  (tags search)))))
+
+#+END_SRC
+
+and this one actually works, but only for one tag and not anded together
+#+BEGIN_SRC emacs-lisp :tangle no
+(defun tl/bookmark-search (search)
+  (--map (list (org-element-property :raw-value it)
+               (org-element-property :SOURCE it))
+         (org-ql--query "~/dev/notes/bookmarks.org"
+           `(and (todo)
+                 (tags ,search))
+           :action (lambda ()
+                     (org-element-headline-parser (line-end-position))))))
+#+END_SRC
+
+
+#+BEGIN_SRC emacs-lisp :tangle no
+(tl/bookmark-search "test")
+#+END_SRC
+
+#+RESULTS:
+| tosh nottest | - (Bing) | https://www.bing.com/?toHttps |
+
+#+BEGIN_SRC emacs-lisp :tangle no
+(tl/build-and '("test"))
 #+END_SRC
