--- a/spacemacs/.emacs.d/private/orgmode.org
+++ b/spacemacs/.emacs.d/private/orgmode.org
@@ -204,13 +204,19 @@ org drill, think this comes from org-
   :CREATED: %U
   :END:")
 
-  ("j" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
+  ("d" "Journal" entry (file+olp+datetree "~/dev/notes/diary.org")
   "* %?
   :PROPERTIES:
   :CREATED: %U
   :END:
   " :clock-in t :clock-resume t :empty-lines 1)
 
+  ("j" "Work Journal" entry (file+olp+datetree "~/dev/notes/work_journal.org")
+  "* %?
+  :PROPERTIES:
+  :CREATED: %U
+  :END:
+  " :clock-in t :clock-resume t :empty-lines 1)
   ;; ("w" "org-protocol" entry (file "~/dev/notes/refile.org")
   ;;  "* TODO Review %c\nCREATED: %U\n" :immediate-finish t)
 
